# Calibrate-Twheel_imu-Tcamera_imu-with-ceres

./: A34.txt  CMakeLists.txt  ReadMe.md  TcbCalibrate.cpp  ceres_problem.cpp  ceres_problem.h  classes.cpp  classes.h  common.h  common.hpp  debug.cc  debug_fx_200.cc  debug_fx_400.cc  debug_no_deg.cc  debug_res_norm.cc  debug_res_pixel.cc  debug_不使用位置一致性.cc  debug_从深度为正-SVD条件数有效-标准差合理._3个条件来使得最终的位置估计收敛cc  debug_使用位置一致性.cc  debug_像素非退化_可以看到任意两行系数矩阵都没有绝对哪个位置大.cc  debug_运动退化_像素未退化_发现第3列仍有较大值.cc  debug_退化_可以发现系数矩阵第3列值小.cc  debug_退化_可以看到系数矩阵任两行的第3个与其余2个系数量级差异大.cc  debug_非退化运动and退化像素.cc  degerate_coefficient_matrix.cpp  imuWheelCalibrate.cpp  inverse_depth_filter.bash  inverse_depth_filter.cpp  larndmark_radius_to_evaluate_depth.cpp  main1.cpp  multiipolar_line_constraint.cpp  optimizaLandmarkPosition.cpp  optimizaLandmarkPosition_no_normlized_obv_in_ceres.cpp  optimizaLandmarkPosition_on_normlized_plane_Z1.cpp  run.bash  run_gdb.bash  utils.cpp  utils.h
